[package]
name = "bfind"
edition = "2021"
version = "0.0.1"
authors = ["Zhaosheng Pan <zhaosheng.pan@sololand.moe"]
description = "A GNU find-like tool, but uses breadth-first search instead of depth-first search"
license-file = "LICENSE"

[dependencies]
tempfile = "3"
thiserror = "1"
debug_print = "1"
memmap2 = "0.9"
