[package]
name = "bfind"
edition = "2021"
version = "0.0.4"
authors = ["Zhaosheng Pan <zhaosheng.pan@sololand.moe"]
description = "A GNU Find-like tool, but uses breadth-first search instead of depth-first search"
license = "Apache-2.0"
repository = "https://github.com/brglng/bfind"
keywords = ["file", "filesystem", "find", "search", "tool"]
categories = ["command-line-utilities"]

[dependencies]
tempfile = "3"
thiserror = "1"
debug_print = "1"
